feat: migrate some term persistence layer